--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,20 +1,10 @@
 .header {
     background: linear-gradient( rgba(0,0,0,0.7), rgba(0,0,0,0.7));
+    background-image: url(https://delice-pizzas.fr/img/02.png);
     background-size: cover;
-    height: 40vh;
 }
 
-h1 {
+.titulo, .subtitulo {
     color: white;
-    position: absolute;
-    top: 30%;
-    margin-left: 20%;
-}
-
-h3 {
-    color: red;
-    position: absolute;
-    top: 45%;
-    margin-left: 9%;
 }
 
